unpackaged/main/default/objects/Bulletin__c/Bulletin__c.object-meta.xml
<CustomObject>
    <description>Used to display daily Employee information</description>
    <label>Bulletin</label>
    <nameField>
        <displayFormat>Blt-{000000}</displayFormat>
        <label>Bulletin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulletins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>