unpackaged/main/default/objects/Bulletin__c/fields/Bulletin_Date__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_Date__c</fullName>
    <description>Bulletin Date</description>
    <label>Bulletin Date</label>
    <type>Date</type>
</CustomField>