unpackaged/main/default/objects/Bulletin__c/fields/Bulletin_Date_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_Date_Duplicate__c</fullName>
    <description>Used to prevent duplicates in Bulletin Date field.</description>
    <label>Bulletin Date Duplicate</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>