unpackaged/main/default/objects/Bulletin__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Bulletin details to be displayed</description>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>