unpackaged/main/default/objects/Bulletin__c/recordTypes/AR_Support.recordType-meta.xml
<RecordType>
    <fullName>AR_Support</fullName>
    <active>true</active>
    <description>AR Support Report Type</description>
    <label>AR Support</label>
</RecordType>