unpackaged/main/default/objects/Bulletin__c/recordTypes/CRA_Tech_Support.recordType-meta.xml
<RecordType>
    <fullName>CRA_Tech_Support</fullName>
    <active>true</active>
    <description>Bulletin Record for CRA and Tech Support</description>
    <label>CRA/Tech Support</label>
</RecordType>