unpackaged/main/default/objects/Bulletin__c/recordTypes/Customer_Support.recordType-meta.xml
<RecordType>
    <fullName>Customer_Support</fullName>
    <active>true</active>
    <description>Bulletin for Customer Support</description>
    <label>Customer Support</label>
</RecordType>