unpackaged/main/default/objects/Bulletin__c/recordTypes/RA_Support.recordType-meta.xml
<RecordType>
    <fullName>RA_Support</fullName>
    <active>true</active>
    <description>For the RA Team</description>
    <label>RA Support</label>
</RecordType>